--- a/templates/login.html
+++ b/templates/login.html
@@ -5,10 +5,11 @@
 	<title>Login Page</title>
 </head>
 <body>
-	<h1>Logo</h1>
-	<div class="center">
-		<h1>Login</h1>
-	</div>
+<img src="Logo.png" alt="Logo" width="26%" style=" padding:30px 30px 30px 30px;" align="center">
+
+<div class="center">
+  <h1>Login</h1>
+</div>
 
 
 </body>
