--- a/templates/login.html
+++ b/templates/login.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="main.css">
 	<title>Login Page</title>
 </head>
 <body>
-<img src="Logo.png" alt="Logo" width="26%" style=" padding:30px 30px 30px 30px;" align="center">
 
-<div class="center">
-  <h1>Login</h1>
+<div class="centre">
+	<img src="{{ url_for('static', filename='Logo.png') }}" alt="Logo" width="30%">
+	<h1 align="center">Login</h1>
 </div>
 
 
 </body>
 </html>
+
