login works now, homepage is fixed

--- a/templates/template.html
+++ b/templates/template.html
@@ -9,7 +9,7 @@
 		<a href="#ask">Ask a Quesiton</a>
 		<a href="#forum">Forum</a>
 		<a href="#profile">My Profile</a>
-        <img src="/static/WhiteLogo.png" width="10%" alt="Logo" style=" padding:10px 20px 10px 0px;" align="right">
+        <img src="/static/WhiteLogo.png" width="10%" alt="Logo" style=" padding:10px 20px 10px 0px; bottom: auto;" align="right">
 	</div>
 
 	{% if title %}
