--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -122,13 +122,34 @@ span.psw {
      width: 100%;
   }
 }
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 25%}
+
+  .center {
+  margin: auto;
+  width: 80%;
+  border: 3px solid white;
+  padding: 150px;
+}
+
+.center2 {
+  margin: auto;
+  width: 60%;
+  border: 3px solid #003e50;
+  padding: 20px;
+}
 </style>
 </head>
 <body>
+<div class="center">
+<div class="center2">
+<img src="/static/Logo.png" alt="Logo">
+<h2 align="center">Login</h2>
 
-<h2>Login</h2>
-
-<button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
+<button onclick="document.getElementById('id01').style.display='block'" style="width:auto; margin-right:auto; margin-left:auto; display: block;">Login</button>
 
 <div id="id01" class="modal">
   
@@ -153,6 +174,8 @@ span.psw {
       <span class="psw">Forgot <a href="#">password?</a></span>
     </div>
   </form>
+</div>
+</div>
 </div>
 
 <script>
