--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
 <div class="center">
 <div class="center2">
 <img src="/static/Logo.png" alt="Logo" width="40%">
-<h2 align="center">Login</h2>
+<h2 align="center" style="padding: 2.5%;"></h2>
 
 <button onclick="document.getElementById('id01').style.display='block'" style="width:auto; margin-right:auto; margin-left:auto; display: block;">Login</button>
 
