--- a/templates/login.html
+++ b/templates/login.html
@@ -8,45 +8,35 @@
 <body>
 <div class="center">
 <div class="center2">
-<img src="/static/Logo.png" alt="Logo" width="40%">
 <h2 align="center" style="padding: 2.5%;"></h2>
-
-<button onclick="document.getElementById('id01').style.display='block'" style="width:auto; margin-right:auto; margin-left:auto; display: block;">Login</button>
-
-<div id="id01" class="modal">
-  
-  <form class="modal-content animate" action="/action_page.php" method="post">
-    <div class="imgcontainer">
-      <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
       <img src="/static/Logo.png" alt="Logo" class="avatar">
-    </div>
 
-    <div class="container">
-      <form action="" method="post">
-        {{ form.hidden_tag() }}
-        <p>
-          {{form.email.label}} <br>
-          {{form.email(size=30)}}
-        </p>
 
-        <p>
-          {{form.password.label}} <br>
-          {{form.password(size=30)}}
-        </p>
+      <form method="POST" action="">
+        {{form.hidden_tag() }}
+        <div class="form-group">
+          {{form.email.label}}
+          {% if form.email.errors %}
+            {{form.email(size=30, class="form-control is-invalid")}}
+            <div class="invalid-feedback">
+              {% for error in form.email.errors %}
+                <span>{{ error }}</span>
+              {% endfor %}
+            </div>
+          {% else %}
+           {{form.email(size=30, class="form-control")}}
+          {% endif %}
+        </div>
+        {{form.password.label}} <br>
+        {{form.password(size=30)}}
 
-        <p>
-          {{form.remember}} <br>
-        </p>
-        
-        <p>
-          {{form.submit(class="btn btn-outline-info")}} <br>
-        </p>
+        {{form.remember}} <br>
+
+        {{form.submit(class="btn btn-outline-info")}} <br>
 
       </form>
-    </div>
 
     <div class="container" style="background-color:#f1f1f1">
-      <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
       <span class="psw">Forgot <a href="#">password?</a></span>
     </div>
   </form>
@@ -54,17 +44,6 @@
 </div>
 </div>
 
-<script>
-// Get the modal
-var modal = document.getElementById('id01');
-
-// When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-    if (event.target == modal) {
-        modal.style.display = "none";
-    }
-}
-</script>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
