--- a/itroom/templates/addUser.html
+++ b/itroom/templates/addUser.html
@@ -20,7 +20,7 @@
           {% endif %}
         </div>
           {{form.password.label}} <br>
-          {{form.password(size=30)}}
+          {{form.password(size=30 ,class="form-control")}}
         
           {{form.submit(class="btn btn-outline-info")}} <br>
         
