--- a/itroom/templates/home.html
+++ b/itroom/templates/home.html
@@ -1,4 +1,25 @@
 {% extends "template.html" %}
 {% block content %}
-    <h1>Home Page</h1>
+<table class="tg", style="position: absolute; top: 10%; bottom: 0; left: 0; right: 0; height: 100%; width: 100%; min-height: 100vh;">
+    <tr style="height: 40%;">
+        <th class="tg-9t3c" colspan="3">
+            <h1>Welcome To The ITRoom</h1>
+            <b>Body about the text</b>
+        </th>
+        <th class="tg-9t3c">
+            <b>Overview from user's profile - to be set up later</b>
+        </th>
+    </tr>
+    <tr>
+        <td class="tg-9t3c">
+            <b>Button to redirect to 'Ask a Question'</b>
+        </td>
+        <td class="tg-9t3c">
+            <b>Preview of recently asked questions</b>
+        </td>
+        <td class="tg-9t3c" colspan="2">
+            <b>Slideshow of images to fill up white space</b>
+        </td>
+    </tr>
+    </table>
 {% endblock content %}
