--- a/itroom/static/main.css
+++ b/itroom/static/main.css
@@ -5,6 +5,12 @@ body {
 	font-size: 1em!important;
 	font-family: Arial, Helvetica, sans-serif;}
 
+.title {
+	font-size: 18px;
+	font-family:"Lucida Console", Monaco, monospace !important;;
+	text-align:center;
+	}
+
 /* .topnav Styling */
 .topnav {
 	overflow: hidden;
@@ -54,8 +60,8 @@ body {
     right: 0;
     height: 100%;
     width: 100%;
-    min-height: 100vh;
-}
+	min-height: 100vh;
+	table-layout: fixed;}
 
 .tg td{
 	font-family:Arial,sans-serif;
@@ -78,11 +84,9 @@ body {
 	border-color:black;}
 
 .tg .tg-9t3c{
-	font-size:16px;
+	/*font-size:16px;
 	font-family:"Lucida Console", Monaco, monospace !important;;
-	/*color:#00009b;
-	border-color:#000000;*/
-	text-align:center;
+	text-align:center;*/
 	vertical-align:top}
 
 img{
