--- a/itroom/static/main.css
+++ b/itroom/static/main.css
@@ -3,7 +3,8 @@
 body {
 	margin: 0;
 	font-size: 1em!important;
-	font-family: Arial, Helvetica, sans-serif;}
+	font-family: Arial, Helvetica, sans-serif;
+	text-align: center;}
 
 .title {
 	font-size: 18px;
