--- a/itroom/templates/home.html
+++ b/itroom/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "template.html" %}
 {% block content %}
-<table class="tg", style="position: absolute; top: 10%; bottom: 0; left: 0; right: 0; height: 100%; width: 100%; min-height: 100vh; table-layout: fixed">
+<table class="tg", style="text-align: center; position: absolute; top: 10%; bottom: 0; left: 0; right: 0; height: 100%; width: 100%; min-height: 100vh; table-layout: fixed">
     <tr style="height: 40%;">
         <th class="tg-9t3c" colspan="3">
             <h1 class ="title">Welcome To The ITRoom</h1>
